a little more added

--- a/TODO
+++ b/TODO
@@ -3,5 +3,6 @@
 - git repo online
 - get db calls running
   - columns for main info
+- git pull for weaponized police
 - table UI
 - better place for this directory to live?
